--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,12 +18,15 @@
 
 html {
   scroll-behavior: smooth;
+  overscroll-behavior: none;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+
+  
 
   margin: 0;
   padding: 0;
