--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 
-  
+  position: fixed;
 
   margin: 0;
   padding: 0;
