--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,11 +30,15 @@ body {
 
   margin: 0;
   padding: 0;
-  height: 100%;
+  /* height: 100%; */
   overflow-x: hidden;
 }
 
 .content {
-  height: 200vh; /* Scrollable content height */
-  padding: 2rem;
+  /* height: 200vh; Scrollable content height
+  padding: 2rem; */
+}
+
+body, .content {
+  height: 100dvh;
 }
