--- a/src/app/styles/BackgroundImage.module.css
+++ b/src/app/styles/BackgroundImage.module.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  /* width: 100lvw; */
-  height: 100lvh;
+  height: 100%;
+  width: auto;
   background-image: url('/the-modes-website/moons-cropped-v2.jpg');
   background-size: cover;
   background-attachment: fixed;
