--- a/src/app/styles/BackgroundImage.module.css
+++ b/src/app/styles/BackgroundImage.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: auto;
+  width: 100%;
   background-image: url('/the-modes-website/moons-cropped-v2.jpg');
   background-size: cover;
   background-attachment: fixed;
