--- a/src/app/styles/BackgroundImage.module.css
+++ b/src/app/styles/BackgroundImage.module.css
@@ -1,11 +1,11 @@
 .backgroundImage {
-  position: fixed;
+  position: static;
   top: 0;
   left: 0;
-  height: 100%;
+  height: 100d;
   width: 100%;
   background-image: url('/the-modes-website/moons-cropped-v2.jpg');
-  background-size: cover;
+  background-size: 100% 100%;
   background-attachment: fixed;
   background-position: var(--bg-pos, 0%) center;
   z-index: -1;
