--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url('/the-modes-website/night-sky-5.png');
+  background-color: rgba(0,0,0,1);
 
   margin: 0;
   padding: 0;
