--- a/src/app/styles/Title.module.css
+++ b/src/app/styles/Title.module.css
@@ -1,8 +1,7 @@
 .title {
     text-shadow: 0.03em 0 0 rgba(254, 0, 254, 1), -0.03em -0.01em 0 rgba(0, 240, 240, 1);
-    animation: glow s infinite alternate;
+    animation: glow 6s infinite alternate;
     animation-timing-function: lienar;
-    /* animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1.0); */
 }
 
 @keyframes glow {
@@ -10,26 +9,3 @@
         text-shadow: 0.03em 0 0 rgb(30, 255, 0, 1), -0.03em -0.01em 0 rgb(255, 85, 0);
     }
 }
-
-
-
-
-
-
-
-
-
-/* 
-
-@keyframes glow {
-    50% {
-        text-shadow: 0.03em 0 0 rgba(254, 0, 254, 1), -0.03em -0.01em 0 rgba(200, 240, 240, 1);
-    }
-
-    to {
-        text-shadow: 0.03em 0 0 rgba(254, 200, 254, 1), -0.03em -0.01em 0 rgba(200, 240, 240, 1);
-    }
-}
-
-
-*/
