--- a/src/app/styles/Title.module.css
+++ b/src/app/styles/Title.module.css
@@ -1,7 +1,7 @@
 .title {
     text-shadow: 0.03em 0 0 rgba(254, 0, 254, 1), -0.03em -0.01em 0 rgba(0, 240, 240, 1);
     animation: glow 6s infinite alternate;
-    animation-timing-function: lienar;
+    animation-timing-function: linear;
 }
 
 @keyframes glow {
