--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url('/the-modes-website/night-sky-5.png');
+  background-image: url('/night-sky-5.png');
   background-color: rgba(0,0,0,1);
 
   margin: 0;
